--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@testing-library/user-event": "^13.5.0",
     "airtable": "^0.11.6",
     "axios": "^0.27.2",
+    "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "framer-motion": "^7.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "swiper": "^9.2.0",
