--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "airtable": "^0.11.6",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "framer-motion": "^7.5.1",
     "react": "^18.2.0",
