--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "formik": "^2.2.9",
     "framer-motion": "^7.5.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-modal": "^3.16.1",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
