--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "framer-motion": "^7.5.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
